# mobilszol.cpp

./: azonosithato.h  dijcsomagok.h  forgalom.cpp  lista.h  memtrace.cpp  memtrace.h
mobilszol/: CMakeLists.txt  forgalom.h  lista.cpp  string5.cpp  string5.h  teszt_main.cpp  ugyfel.cpp  ugyfel.h
